Fix title word break on post page on mobile

--- a/ui/scss/component/_post.scss
+++ b/ui/scss/component/_post.scss
@@ -52,6 +52,11 @@
     font-size: 3rem;
     line-height: 1;
   }
+  @media (max-width: $breakpoint-small) {
+    span {
+      word-break: break-all;
+    }
+  }
 }
 
 .post__info {
